archive/cluster/apps/networking/traefik/passthrough/nextcloud-passthrough.yaml
apiVersion: v1
kind: Service
metadata:
  name: nc
  namespace: networking
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 55880
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nc
  namespace: networking
subsets:
- addresses:
  - ip: 10.10.91.99
  ports:
  - port: 55880
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"  
    traefik.ingress.kubernetes.io/router.middlewares: "networking-nc-tls@kubernetescrd"
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    hajimari.io/appName: "nextcloud"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "nc.${SECRET_DOMAIN}"
    - secretName: "${SECRET_DOMAIN/./-}-tls"
  rules:
    - host: nc.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-admin
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"  
    traefik.ingress.kubernetes.io/router.middlewares: "networking-rfc1918@kubernetescrd"
    hajimari.io/enable: "false"
    hajimari.io/icon: "web"
    hajimari.io/appName: "nextcloud-admin"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "nc.${SECRET_DOMAIN}"
    - secretName: "${SECRET_DOMAIN/./-}-tls"
  rules:
    - host: nc.${SECRET_DOMAIN}
      http:
        paths:
          - path: /settings/admin
            pathType: Prefix
            backend:
              service:
                name: nc
                port:
                  number: 80
